@@ -109,6 +109,10 @@ Zope Changes
 
     Bugs fixed
 
+     - Collector #1259: removed the "uninstall" target from the Makefile
+       since the uninstall routine could also remove non-Zope files. Because
+       this was to dangerous it has been removed completely. 
+
      - Collector #1299: Fixed bug in sequence.sort()
 
      - Collector #1159: Added test for __MACH__ to initgroups.c so the
